[workspace]
members = [
    ".",
    "playground",
    "contests/cf-educational-148-div-2",
    "contests/cf-educational-149-div-2",
    "contests/cf-round-869-div-2",
    "contests/cf-round-870-div-2",
    "contests/cf-round-872-div-2",
    "contests/cf-round-873-div-2",
    "contests/cf-round-875-div-2",
    "contests/cf-round-877-div-2",
]

[package]
name = "contest_lib_rs"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2021"

[dependencies]

[dev-dependencies]
pretty_assertions = "1.3.0"
