[workspace]
members = [
    ".",
    "contests/cf-codeton-5",
    "contests/cf-educational-148",
    "contests/cf-educational-149",
    "contests/cf-educational-150",
    "contests/cf-educational-152",
    "contests/cf-educational-153",
    "contests/cf-educational-154",
    "contests/cf-round-869-div-2",
    "contests/cf-round-870-div-2",
    "contests/cf-round-872-div-2",
    "contests/cf-round-873-div-2",
    "contests/cf-round-875-div-2",
    "contests/cf-round-877-div-2",
    "contests/cf-round-883-div-3",
    "contests/cf-round-884-div-1-2",
    "contests/cf-round-885-div-2",
    "contests/cf-round-889-div-1",
    "playground",
]

[package]
name = "contest_lib_rs"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2021"

[dependencies]

[dev-dependencies]
itertools = "0.10.5"
pretty_assertions = "1.3.0"
