[workspace]
members = [
    ".",
    "contests/cf-codeton-5",
    "contests/cf-codeton-6",
    "contests/cf-compfest-15",
    "contests/cf-educational-148",
    "contests/cf-educational-149",
    "contests/cf-educational-150",
    "contests/cf-educational-152",
    "contests/cf-educational-153",
    "contests/cf-educational-154",
    "contests/cf-educational-156",
    "contests/cf-educational-157",
    "contests/cf-educational-158",
    "contests/cf-educational-162",
    "contests/cf-educational-163",
    "contests/cf-epic-2024",
    "contests/cf-european-championship-2024",
    "contests/cf-icpc-2022-2023-russia",
    "contests/cf-round-869-div-2",
    "contests/cf-round-870-div-2",
    "contests/cf-round-872-div-2",
    "contests/cf-round-873-div-2",
    "contests/cf-round-875-div-2",
    "contests/cf-round-877-div-2",
    "contests/cf-round-883-div-3",
    "contests/cf-round-884-div-1-2",
    "contests/cf-round-885-div-2",
    "contests/cf-round-889-div-1",
    "contests/cf-round-895-div-3",
    "contests/cf-round-895-div-3",
    "contests/cf-round-897-div-2",
    "contests/cf-round-899-div-2",
    "contests/cf-round-900-div-3",
    "contests/cf-round-901-div-1",
    "contests/cf-round-902-div-1",
    "contests/cf-round-903-div-3",
    "contests/cf-round-907-div-2",
    "contests/cf-round-908-div-1",
    "contests/cf-round-914-div-2",
    "contests/cf-round-921-div-1",
    "contests/cf-round-922-div-2",
    "contests/cf-round-923-div-3",
    "contests/cf-round-924-div-2",
    "contests/cf-round-925-div-3",
    "contests/cf-round-926-div-2",
    "contests/cf-round-930-div-1",
    "contests/cf-round-932-div-2",
    "contests/cf-round-936-div-2",
    "contests/cf-round-945-div-2",
    "contests/cf-round-947-div-1-2",
    "contests/cf-round-949-div-2",
    "contests/cf-round-951-div-2",
    "contests/cf-round-959-div-1-2",
    "contests/cf-round-968-div-2",
    "contests/cf-round-969-div-1-2",
    "graph-render",
    "playground",
]

[package]
name = "contest_lib_rs"
version = "0.1.0"
authors = ["Andrei Matveiakin <a.matveiakin@gmail.com>"]
edition = "2021"

[dependencies]

[dev-dependencies]
itertools = "0.10.5"
pretty_assertions = "1.3.0"
