[package]
name = "cf-asia-pacific-championship-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
contest_lib_rs = { path = "../.." }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "f"
path = "src/f.rs"

[[bin]]
name = "g"
path = "src/g.rs"

[[bin]]
name = "h"
path = "src/h.rs"

[[bin]]
name = "j"
path = "src/j.rs"
