[package]
name = "cf-european-championship-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
contest_lib_rs = { path = "../.." }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "f"
path = "src/f.rs"

[[bin]]
name = "i"
path = "src/i.rs"
