[package]
name = "cf-helvetic-coding-contest-2017"
version = "0.1.0"
edition = "2021"

[dependencies]
contest_lib_rs = { path = "../.." }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "k"
path = "src/k.rs"

[[bin]]
name = "l"
path = "src/l.rs"

[[bin]]
name = "m"
path = "src/m.rs"
