[package]
name = "cf-round-877-div-2"
version = "0.1.0"
edition = "2021"

[dependencies]
contest_lib_rs = { path = "../.." }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "d"
path = "src/d.rs"
