[package]
name = "cf-round-883-div-3"
version = "0.1.0"
edition = "2021"

[dependencies]
contest_lib_rs = { path = "../.." }

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "d"
path = "src/d.rs"

[[bin]]
name = "e1"
path = "src/e1.rs"

[[bin]]
name = "e2"
path = "src/e2.rs"

[[bin]]
name = "f"
path = "src/f.rs"

[[bin]]
name = "g"
path = "src/g.rs"
